# TTLVReader

./: README.md
TTLVReader/: CMakeLists.txt  TTLVReader.pro  about_dlg.cpp  about_dlg.h  about_dlg.ui  auto_update_service.cpp  auto_update_service.h  common.cpp  common.h  edit_dlg.cpp  edit_dlg.h  edit_dlg.ui  i18n_helper.h  insert_data_dlg.cpp  insert_data_dlg.h  insert_data_dlg.ui  mac_sparkle_support.mm  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reader_applet.cpp  reader_applet.h  reader_tree_item.cpp  reader_tree_item.h  reader_tree_model.cpp  reader_tree_model.h  reader_tree_view.cpp  reader_tree_view.h  req_encoder_dlg.cpp  req_encoder_dlg.h  req_encoder_dlg.ui  send_msg_dlg.cpp  send_msg_dlg.h  send_msg_dlg.ui  settings_dlg.cpp  settings_dlg.h  settings_dlg.ui  settings_mgr.cpp  settings_mgr.h  (+4 more)
TTLVReader/i18n/: ttlvreader_ko_KR.ts
package/msi/: Includes.wxi  Makefile  MyInstallDirDlg.wxs  TTLVReader.wxs  en_US.wxl  ko_KR.wxl
